salesforce/force-app/main/default/objects/Lead/fields/BudgetRange__c.field-meta.xml
<CustomField>
    <fullName>BudgetRange__c</fullName>
    <description>Approximate budget range.</description>
    <inlineHelpText>Enter a range or top-of-budget value.</inlineHelpText>
    <label>Budget Range</label>
    <length>80</length>
    <type>Text</type>
</CustomField>