salesforce/force-app/main/default/objects/Lead/fields/InterestType__c.field-meta.xml
<CustomField>
    <fullName>InterestType__c</fullName>
    <description>Type of interest: New, Used, Service, Finance.</description>
    <inlineHelpText>Select the prospect’s interest.</inlineHelpText>
    <label>Interest Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>