salesforce/force-app/main/default/objects/Lead/fields/VehicleInterest_Make__c.field-meta.xml
<CustomField>
    <fullName>VehicleInterest_Make__c</fullName>
    <description>Prospect’s interested make.</description>
    <inlineHelpText>Enter the make brand the prospect prefers.</inlineHelpText>
    <label>Vehicle Interest Make</label>
    <length>80</length>
    <type>Text</type>
</CustomField>