salesforce/force-app/main/default/objects/Lead/fields/VehicleInterest_Model__c.field-meta.xml
<CustomField>
    <fullName>VehicleInterest_Model__c</fullName>
    <description>Prospect’s interested model.</description>
    <inlineHelpText>Enter the model the prospect prefers.</inlineHelpText>
    <label>Vehicle Interest Model</label>
    <length>80</length>
    <type>Text</type>
</CustomField>